sdks/swift/Sources/CGoudEngine/include/goud_engine.h

/**
 * FFI-safe Sprite representation.
 */
typedef struct FfiSprite {
    /**
     * Texture handle (index and generation packed as u64).
     */
    uint64_t texture_handle;
    /**
     * Color tint red component (0.0 - 1.0).
     */
    float color_r;
    /**
     * Color tint green component (0.0 - 1.0).
     */
    float color_g;
    /**
     * Color tint blue component (0.0 - 1.0).
     */
    float color_b;
    /**
     * Color tint alpha component (0.0 - 1.0).
     */
    float color_a;
    /**
     * Source rectangle X position (if has_source_rect is true).
     */
    float source_rect_x;
    /**
     * Source rectangle Y position.
     */
    float source_rect_y;
    /**
     * Source rectangle width.
     */
    float source_rect_width;
    /**
     * Source rectangle height.
     */
    float source_rect_height;
    /**
     * Whether source_rect is set.
     */
    bool has_source_rect;
    /**
     * Flip horizontally flag.
     */
    bool flip_x;
    /**
     * Flip vertically flag.
     */
    bool flip_y;
    /**
     * Explicit render-order layer.
     */
    int32_t z_layer;
    /**
     * Anchor point X (normalized 0-1).
     */
    float anchor_x;
    /**
     * Anchor point Y (normalized 0-1).
     */
    float anchor_y;
    /**
     * Custom size width (if has_custom_size is true).
     */
    float custom_size_x;
    /**
     * Custom size height.
     */
    float custom_size_y;
    /**
     * Whether custom_size is set.
     */
    bool has_custom_size;
} FfiSprite;
/**
 * FFI-safe Color representation.
 */
typedef struct FfiColor {
    /**
     * Red component (0.0 - 1.0).
     */
    float r;
    /**
     * Green component (0.0 - 1.0).
     */
    float g;
    /**
     * Blue component (0.0 - 1.0).
     */
    float b;
    /**
     * Alpha component (0.0 - 1.0).
     */
    float a;
} FfiColor;
/**
 * FFI-safe Rect representation.
 */
typedef struct FfiRect {
    /**
     * X position of the rectangle.
     */
    float x;
    /**
     * Y position of the rectangle.
     */
    float y;
    /**
     * Width of the rectangle.
     */
    float width;
    /**
     * Height of the rectangle.
     */
    float height;
} FfiRect;
/**
 * FFI-safe Transform2D representation.
 */
typedef struct FfiTransform2D {
    /**
     * Position X in world space.
     */
    float position_x;
    /**
     * Position Y in world space.
     */
    float position_y;
    /**
     * Rotation angle in radians.
     */
    float rotation;
    /**
     * Scale along X axis.
     */
    float scale_x;
    /**
     * Scale along Y axis.
     */
    float scale_y;
} FfiTransform2D;
/**
 * Heap-allocated transform builder for FFI use.
 */
typedef struct FfiTransform2DBuilder {
    /**
     * The transform being built.
     */
    struct FfiTransform2D transform;
} FfiTransform2DBuilder;
/* === Transform2D === */

/**
 * Creates a new transform builder with default values.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_new(void);
/**
 * Translates the builder's position.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_translate(struct FfiTransform2DBuilder *builder, float dx, float dy);
/**
 * Rotates the builder's transform.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_rotate(struct FfiTransform2DBuilder *builder, float angle);
/**
 * Multiplies the builder's scale.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_scale_by(struct FfiTransform2DBuilder *builder, float factor_x, float factor_y);
/**
 * Builds and consumes the transform builder, returning the final transform.
 */
struct FfiTransform2D goud_transform2d_builder_build(struct FfiTransform2DBuilder *builder);
/**
 * Frees a transform builder without building.
 */
void goud_transform2d_builder_free(struct FfiTransform2DBuilder *builder);
/**
 * Sets the color tint for this sprite.
 */
void goud_sprite_set_color(struct FfiSprite *sprite, float r, float g, float b, float a);
/**
 * Gets the color tint of the sprite.
 */
struct FfiColor goud_sprite_get_color(const struct FfiSprite *sprite);
/**
 * Creates a new sprite with the specified color tint (builder pattern).
 */
struct FfiSprite goud_sprite_with_color(struct FfiSprite sprite, float r, float g, float b, float a);
/**
 * Sets the alpha (transparency) for this sprite.
 */
void goud_sprite_set_alpha(struct FfiSprite *sprite, float alpha);
/**
 * Gets the alpha (transparency) of the sprite.
 */
float goud_sprite_get_alpha(const struct FfiSprite *sprite);
/**
 * Creates a new sprite with default settings.
 */
struct FfiSprite goud_sprite_new(uint64_t texture_handle);
/**
 * Creates a default sprite with an invalid texture handle.
 */
struct FfiSprite goud_sprite_default(void);
/**
 * Sets the source rectangle for sprite sheet rendering.
 */
void goud_sprite_set_source_rect(struct FfiSprite *sprite, float x, float y, float width, float height);
/**
 * Removes the source rectangle, rendering the full texture.
 */
void goud_sprite_clear_source_rect(struct FfiSprite *sprite);
/**
 * Gets the source rectangle of the sprite.
 */
bool goud_sprite_get_source_rect(const struct FfiSprite *sprite, struct FfiRect *out_rect);
/**
 * Returns whether the sprite has a source rectangle set.
 */
bool goud_sprite_has_source_rect(const struct FfiSprite *sprite);