sdks/csharp/NativeMethods.g.cs


        /// <summary>
        ///  Translates the builder's position.
        ///
        ///  Adds the offset to the current position.
        ///
        ///  # Parameters
        ///
        ///  - `builder`: Pointer to the builder
        ///  - `dx`: X offset
        ///  - `dy`: Y offset
        ///
        ///  # Returns
        ///
        ///  The same builder pointer for chaining.
        ///
        ///  # Safety
        ///
        ///  - `builder` must be a valid pointer from `goud_transform2d_builder_new()` or null
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_builder_translate", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiTransform2DBuilder* goud_transform2d_builder_translate(FfiTransform2DBuilder* builder, float dx, float dy);

        /// <summary>
        ///  Rotates the builder's transform.
        ///
        ///  Adds the angle to the current rotation.
        ///
        ///  # Parameters
        ///
        ///  - `builder`: Pointer to the builder
        ///  - `angle`: Angle to rotate by in radians
        ///
        ///  # Returns
        ///
        ///  The same builder pointer for chaining.
        ///
        ///  # Safety
        ///
        ///  - `builder` must be a valid pointer from `goud_transform2d_builder_new()` or null
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_builder_rotate", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiTransform2DBuilder* goud_transform2d_builder_rotate(FfiTransform2DBuilder* builder, float angle);

        /// <summary>
        ///  Multiplies the builder's scale.
        ///
        ///  # Parameters
        ///
        ///  - `builder`: Pointer to the builder
        ///  - `factor_x`: X scale multiplier
        ///  - `factor_y`: Y scale multiplier
        ///
        ///  # Returns
        ///
        ///  The same builder pointer for chaining.
        ///
        ///  # Safety
        ///
        ///  - `builder` must be a valid pointer from `goud_transform2d_builder_new()` or null
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_builder_scale_by", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiTransform2DBuilder* goud_transform2d_builder_scale_by(FfiTransform2DBuilder* builder, float factor_x, float factor_y);

        /// <summary>
        ///  Builds and consumes the transform builder, returning the final transform.
        ///
        ///  This function:
        ///  1. Extracts the transform from the builder
        ///  2. Frees the builder memory
        ///  3. Returns the transform by value
        ///
        ///  After calling this, the builder pointer is invalid.
        ///
        ///  # Parameters
        ///
        ///  - `builder`: Pointer to the builder to consume
        ///
        ///  # Returns
        ///
        ///  The constructed FfiTransform2D. If builder is null, returns a default transform.
        ///
        ///  # Safety
        ///
        ///  - `builder` must be a valid pointer from `goud_transform2d_builder_new()`
        ///  - After this call, the builder pointer must not be used
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_builder_build", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiTransform2D goud_transform2d_builder_build(FfiTransform2DBuilder* builder);

        /// <summary>
        ///  Frees a transform builder without building.
        ///
        ///  Use this if you need to abort transform construction and clean up memory.
        ///
        ///  # Parameters
        ///
        ///  - `builder`: Pointer to the builder to free
        ///
        ///  # Safety
        ///
        ///  - `builder` must be a valid pointer from `goud_transform2d_builder_new()` or null
        ///  - After this call, the builder pointer must not be used
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_builder_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void goud_transform2d_builder_free(FfiTransform2DBuilder* builder);

        /// <summary>
        ///  Creates a new sprite with default settings.
        ///
        ///  The sprite will render the entire texture with:
        ///  - White color tint (no modification)
        ///  - No source rectangle (full texture)
        ///  - No flipping
        ///  - Center anchor point (0.5, 0.5)
        ///  - No custom size (uses texture dimensions)
        ///
        ///  # Parameters
        ///
        ///  - `texture_handle`: The texture asset handle (packed as u64)
        ///
        ///  # Returns
        ///
        ///  A new FfiSprite with default settings.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiSprite goud_sprite_new(ulong texture_handle);

        /// <summary>
        ///  Creates a default sprite with an invalid texture handle.
        ///
        ///  This is primarily useful for deserialization or when the texture
        ///  will be set later.
        ///
        ///  # Returns
        ///
        ///  A default FfiSprite with invalid texture handle.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_default", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiSprite goud_sprite_default();

        /// <summary>
        ///  Sets the color tint for this sprite.
        ///
        ///  The color is multiplied with each texture pixel. Use white (1, 1, 1, 1)
        ///  for no tinting.
        ///
        ///  # Parameters
        ///
        ///  - `sprite`: Pointer to the sprite to modify
        ///  - `r`: Red component (0.0 - 1.0)
        ///  - `g`: Green component (0.0 - 1.0)
        ///  - `b`: Blue component (0.0 - 1.0)
        ///  - `a`: Alpha component (0.0 - 1.0)
        ///
        ///  # Safety
        ///
        ///  - `sprite` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_set_color", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void goud_sprite_set_color(FfiSprite* sprite, float r, float g, float b, float a);

        /// <summary>
        ///  Gets the color tint of the sprite.
        ///
        ///  # Parameters
        ///
        ///  - `sprite`: Pointer to the sprite to read
        ///
        ///  # Returns
        ///
        ///  The color tint as FfiColor.
        ///
        ///  # Safety
        ///
        ///  - `sprite` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_get_color", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiColor goud_sprite_get_color(FfiSprite* sprite);

        /// <summary>
        ///  Creates a new sprite with the specified color tint (builder pattern).
        ///
        ///  # Parameters
        ///
        ///  - `sprite`: The sprite to copy
        ///  - `r`: Red component (0.0 - 1.0)
        ///  - `g`: Green component (0.0 - 1.0)
        ///  - `b`: Blue component (0.0 - 1.0)
        ///  - `a`: Alpha component (0.0 - 1.0)
        ///
        ///  # Returns
        ///
        ///  A new FfiSprite with the updated color.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_with_color", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiSprite goud_sprite_with_color(FfiSprite sprite, float r, float g, float b, float a);

        /// <summary>
        ///  Sets the alpha (transparency) for this sprite.
        ///
        ///  # Parameters
        ///
        ///  - `sprite`: Pointer to the sprite to modify
        ///  - `alpha`: Alpha component (0.0 = transparent, 1.0 = opaque)
        ///
        ///  # Safety
        ///
        ///  - `sprite` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_set_alpha", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void goud_sprite_set_alpha(FfiSprite* sprite, float alpha);

        /// <summary>
        ///  Gets the alpha (transparency) of the sprite.
        ///
        ///  # Safety
        ///
        ///  - `sprite` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_get_alpha", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float goud_sprite_get_alpha(FfiSprite* sprite);

        /// <summary>
        ///  Sets the source rectangle for sprite sheet rendering.
        ///
        ///  The rectangle is specified in pixel coordinates relative to the
        ///  top-left corner of the texture.
        ///
        ///  # Parameters
        ///
        ///  - `sprite`: Pointer to the sprite to modify
        ///  - `x`: X position of the source rectangle
        ///  - `y`: Y position of the source rectangle
        ///  - `width`: Width of the source rectangle
        ///  - `height`: Height of the source rectangle
        ///
        ///  # Safety
        ///
        ///  - `sprite` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_set_source_rect", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void goud_sprite_set_source_rect(FfiSprite* sprite, float x, float y, float width, float height);

        /// <summary>
        ///  Removes the source rectangle, rendering the full texture.
        ///
        ///  # Parameters
        ///
        ///  - `sprite`: Pointer to the sprite to modify
        ///
        ///  # Safety
        ///
        ///  - `sprite` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_clear_source_rect", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void goud_sprite_clear_source_rect(FfiSprite* sprite);

        /// <summary>
        ///  Gets the source rectangle of the sprite.
        ///
        ///  # Parameters
        ///
        ///  - `sprite`: Pointer to the sprite to read
        ///  - `out_rect`: Pointer to store the source rectangle
        ///
        ///  # Returns
        ///
        ///  `true` if the sprite has a source rectangle, `false` otherwise.
        ///
        ///  # Safety
        ///
        ///  - `sprite` and `out_rect` must be valid, non-null pointers
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_get_source_rect", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_sprite_get_source_rect(FfiSprite* sprite, FfiRect* out_rect);

        /// <summary>
        ///  Returns whether the sprite has a source rectangle set.
        ///
        ///  # Safety
        ///
        ///  - `sprite` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_has_source_rect", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_sprite_has_source_rect(FfiSprite* sprite);
